add hero Section and style hero section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
             </ul>
         </div>
     </section>
-    
+
+    <!-- Hero Section -->
+    <section id="hero">
+        <h4> Trade in Offer</h4>
+        <h2>The Girls Zone</h2>
+        <h1>On All product</h1>
+        <p> Save more with  coupons & up to 70% off! </p>
+         <button>Shop Now</button>
+    </section>
+ 
+
 
 </body>
 </html>
