add Product Section and Style for Product section.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping "></i></a></li>
             </ul>
         </div>
     </section>
@@ -59,12 +59,10 @@
             <h6> Save Money </h6>
         </div>
 
-
         <div class="fe-box">
             <img src="/img/features/p.webp" alt="" width="150px">
             <h6>Promation</h6>
         </div>
-
 
 
         <div class="fe-box">
@@ -78,6 +76,170 @@
         </div>
 
     </section>
+
+    <!-- Product Section  -->
+    <section id="Product1" class="section-p1">
+
+        <h2>Featured Product</h2>
+        <p> Summer Collection New Morden Design</p>
+
+        <div class="pro-container">
+            <div class="pro">
+                <img src="/img/products/f1.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f2.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f3.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f4.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f5.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f6.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f7.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/f8.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+
+        </div>
+    </section>
+
 
 
 
