add banner section and style it also add global Buttone Style

--- a/index.html
+++ b/index.html
@@ -240,6 +240,12 @@
         </div>
     </section>
 
+    <!-- Banner Section -->
+    <section id="banner" class="section-m1">
+        <h4>Repair Services</h4>
+        <h2>Up to <span> 70% Off </span> All Suite & Accessories</h2>
+        <button class="normal">Explore More</button>
+    </section>
 
 
 
