--- a/index.html
+++ b/index.html
@@ -247,7 +247,168 @@
         <button class="normal">Explore More</button>
     </section>
 
+    <!-- New Product Section -->
+    <section id="Product1" class="section-p1">
 
+        <h2>New Arrivals</h2>
+        <p> Summer Collection New Morden Design</p>
+
+        <div class="pro-container">
+            <div class="pro">
+                <img src="/img/products/n1.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n2.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n3.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n4.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n5.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n6.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n7.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+            <div class="pro">
+                <img src="/img/products/n8.jpg" alt="">
+
+                <div class="des">
+                    <span>adidas</span>
+                    <h5> Cartoon Astronaut T-Shirts </h5>
+
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+            </div>
+
+        </div>
+    </section>
 
 </body>
 
