add Smaller Banner

--- a/index.html
+++ b/index.html
@@ -410,6 +410,25 @@
         </div>
     </section>
 
+    <!-- Small Banner -->
+    <section id="sm-banner" class="section-p1">
+        <div class="banner-box">
+            <h4> crazy deals</h4>
+            <h2> buy 1 get 1 free</h2>
+            <span>The best classic dress is on sale at care</span>
+            <button class="white">Learn More</button>
+        </div>
+
+        <div class="banner-box banner-box2">
+            <h4> spring/summer</h4>
+            <h2> upcomming season</h2>
+            <span>The best classic dress is on sale at care</span>
+            <button class="white">Collection</button>
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
