add small 3 Text Banner and style of small 3 banner.

--- a/index.html
+++ b/index.html
@@ -428,6 +428,28 @@
 
     </section>
 
+    <!-- Small 3 Text Banner -->
+    <section id="banner3" >
+        <div class="banner-box ">
+            <h2> SEASONAL SALE</h2>
+            <h3> Winter collaction -50 % Off</h3>
+            <span>The best classic dress is on sale at care</span>
+            <button class="white">Collection</button>
+        </div>
+        <div class="banner-box banner-box2">
+            <h2> NEW FOOTWEAR COLLECTION</h2>
+            <h3>Spring / Summer 2023</h3>
+            <span>The best classic dress is on sale at care</span>
+            <button class="white">Collection</button>
+        </div>
+        <div class="banner-box banner-box3">
+            <h2>T-SHIRTS</h2>
+            <h3>New Trendy Prints</h3>
+            <span>The best classic dress is on sale at care</span>
+            <button class="white">Collection</button>
+        </div>
+    </section>
+
 
 </body>
 
