add newsletter Banner Section also style it and change in small 3 text Banner Section remove button

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         </div>
     </section>
 
-    <!-- Small Banner -->
+    <!-- Small Banner  Section -->
     <section id="sm-banner" class="section-p1">
         <div class="banner-box">
             <h4> crazy deals</h4>
@@ -428,28 +428,33 @@
 
     </section>
 
-    <!-- Small 3 Text Banner -->
-    <section id="banner3" >
+    <!-- Small 3 Text Banner Section -->
+    <section id="banner3">
         <div class="banner-box ">
             <h2> SEASONAL SALE</h2>
             <h3> Winter collaction -50 % Off</h3>
-            <span>The best classic dress is on sale at care</span>
-            <button class="white">Collection</button>
         </div>
         <div class="banner-box banner-box2">
             <h2> NEW FOOTWEAR COLLECTION</h2>
             <h3>Spring / Summer 2023</h3>
-            <span>The best classic dress is on sale at care</span>
-            <button class="white">Collection</button>
         </div>
         <div class="banner-box banner-box3">
             <h2>T-SHIRTS</h2>
             <h3>New Trendy Prints</h3>
-            <span>The best classic dress is on sale at care</span>
-            <button class="white">Collection</button>
         </div>
     </section>
 
+    <!-- Newsletter  Banner Section -->
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4> Sign Up For Newslatters</h4>
+            <p> Get E- mail update about our latest shop and <span>special Offers</span>. </p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your Email Address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
 
 </body>
 
