--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- link fontawesome  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" <!-- link Js
-        file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+
+    <!-- script file -->
     <script src="script.js" defer></script>
 </head>
 
@@ -20,7 +21,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">Girls Zone</a>
+        <a href="#" class="logo">BG-Z</a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="#">Home</a></li>
@@ -28,7 +29,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping "></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
             </ul>
         </div>
     </section>
@@ -36,7 +37,7 @@
     <!-- Hero Section -->
     <section id="hero">
         <h4> Trade in Offer</h4>
-        <h2>The Girls Zone</h2>
+        <h2>The BG-Zone</h2>
         <h1>On All product</h1>
         <p> Save more with coupons & up to 70% off! </p>
         <button>Shop Now</button>
@@ -101,7 +102,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f2.jpg" alt="">
@@ -120,7 +121,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f3.jpg" alt="">
@@ -139,7 +140,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f4.jpg" alt="">
@@ -158,7 +159,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f5.jpg" alt="">
@@ -177,7 +178,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f6.jpg" alt="">
@@ -196,7 +197,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f7.jpg" alt="">
@@ -215,7 +216,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/f8.jpg" alt="">
@@ -234,7 +235,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
 
         </div>
@@ -271,7 +272,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n2.jpg" alt="">
@@ -290,7 +291,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n3.jpg" alt="">
@@ -309,7 +310,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n4.jpg" alt="">
@@ -328,7 +329,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n5.jpg" alt="">
@@ -347,7 +348,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n6.jpg" alt="">
@@ -366,7 +367,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n7.jpg" alt="">
@@ -385,7 +386,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="/img/products/n8.jpg" alt="">
@@ -404,7 +405,7 @@
 
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cartIcon"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
 
         </div>
@@ -455,6 +456,60 @@
             <button class="normal">Sign Up</button>
         </div>
     </section>
+
+    <!-- Footer Section -->
+    <footer class="section-p1">
+        <div class="col">
+            <a href="#" class="logo">BG-Z</a>
+            <h4> <strong>Contact</strong> </h4>
+            <p><strong>Address:</strong> Lucknow </p>
+            <p><strong>Phone:</strong> +917607255678 </p>
+            <p><strong>Hours:</strong> 10:00 -18:00, Mon - Sat</p>
+            <div class="follow">
+                <h4>follow us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-pinterest"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About us</a>
+            <a href="#">View Cart</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditon</a>
+            <a href="#">Contact us</a>
+        </div>
+
+        <div class="col">
+            <h4>My account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>Form App Store or Google Play</p>
+            <div class="row">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>&copy; 2023 Abdul Rahman BS-Zone E-commerce Website. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 
