make responsive for ipad device and add js file for navbar for small device .

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <li id="lg-bag"><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
+        </div>
+        <div id="mobile">
+            <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
 
@@ -507,7 +512,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy; 2023 Abdul Rahman BS-Zone E-commerce Website. All rights reserved.</p>
+            <p>&copy; 2023 Abdul Rahman BG-Zone E-commerce Website. All rights reserved.</p>
         </div>
     </footer>
 
