add shop.html file and make active navbar and add header , hero, product , new product, newsletter and footer

--- a/shop.html
+++ b/shop.html
@@ -2,19 +2,15 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Website</title>
-
-
-    <!-- link CSS file -->
+    <title>Shop Page</title>
     <link rel="stylesheet" href="style.css">
-
-    <!-- link fontawesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-
-    <!-- script file -->
     <script src="script.js" defer></script>
+
 </head>
 
 <body>
@@ -24,8 +20,8 @@
         <a href="#" class="logo">BG-Z</a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a  href="index.html">Home</a></li>
+                <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -47,42 +43,7 @@
         <p> Save more with coupons & up to 70% off! </p>
         <button>Shop Now</button>
     </section>
-
-    <!-- Feature Section -->
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="/img/features/fe1.png" alt="" width="150px">
-            <h6>Free Shiping</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/Online Order.jpg" alt="" width="150px">
-            <h6>Online Order</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/Save Money.jpg" alt="" width="150px">
-            <h6> Save Money </h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/p.webp" alt="" width="150px">
-            <h6>Promation</h6>
-        </div>
-
-
-        <div class="fe-box">
-            <img src="/img/features/Happy Shop2.png" alt="" width="150px">
-            <h6>Happy Sell</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/support.png" alt="" width="150px">
-            <h6>Support</h6>
-        </div>
-
-    </section>
-
+    
     <!-- Product Section  -->
     <section id="Product1" class="section-p1">
 
@@ -246,13 +207,6 @@
         </div>
     </section>
 
-    <!-- Banner Section -->
-    <section id="banner" class="section-m1">
-        <h4>Repair Services</h4>
-        <h2>Up to <span> 70% Off </span> All Suite & Accessories</h2>
-        <button class="normal">Explore More</button>
-    </section>
-
     <!-- New Product Section -->
     <section id="Product1" class="section-p1">
 
@@ -413,40 +367,6 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
 
-        </div>
-    </section>
-
-    <!-- Small Banner  Section -->
-    <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4> crazy deals</h4>
-            <h2> buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at care</span>
-            <button class="white">Learn More</button>
-        </div>
-
-        <div class="banner-box banner-box2">
-            <h4> spring/summer</h4>
-            <h2> upcomming season</h2>
-            <span>The best classic dress is on sale at care</span>
-            <button class="white">Collection</button>
-        </div>
-
-    </section>
-
-    <!-- Small 3 Text Banner Section -->
-    <section id="banner3">
-        <div class="banner-box ">
-            <h2> SEASONAL SALE</h2>
-            <h3> Winter collaction -50 % Off</h3>
-        </div>
-        <div class="banner-box banner-box2">
-            <h2> NEW FOOTWEAR COLLECTION</h2>
-            <h3>Spring / Summer 2023</h3>
-        </div>
-        <div class="banner-box banner-box3">
-            <h2>T-SHIRTS</h2>
-            <h3>New Trendy Prints</h3>
         </div>
     </section>
 
