add hero section on shop.html and style add pagination section and also fix the media query make fully responsive

--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,7 @@
         <a href="#" class="logo">BG-Z</a>
         <div>
             <ul id="navbar">
-                <li><a  href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
@@ -36,14 +36,12 @@
     </section>
 
     <!-- Hero Section -->
-    <section id="hero">
-        <h4> Trade in Offer</h4>
-        <h2>The BG-Zone</h2>
-        <h1>On All product</h1>
-        <p> Save more with coupons & up to 70% off! </p>
-        <button>Shop Now</button>
+    <section id="page-header">
+        <h2>#stayhome</h2>
+        <p> Save more with coupons & up to 60% off! </p>
+
     </section>
-    
+
     <!-- Product Section  -->
     <section id="Product1" class="section-p1">
 
@@ -204,16 +202,6 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
 
-        </div>
-    </section>
-
-    <!-- New Product Section -->
-    <section id="Product1" class="section-p1">
-
-        <h2>New Arrivals</h2>
-        <p> Summer Collection New Morden Design</p>
-
-        <div class="pro-container">
             <div class="pro">
                 <img src="/img/products/n1.jpg" alt="">
 
@@ -369,6 +357,14 @@
 
         </div>
     </section>
+
+    <!-- Pagination section -->
+    <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+    </section>
+
 
     <!-- Newsletter  Banner Section -->
     <section id="newsletter" class="section-p1 section-m1">
