add single product page , add single product description and give it commont that 1 product have 4 same type of sample or different color make it shope page to onclick commond and give it responsive style for all devices .

--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,7 @@
         <p> Summer Collection New Morden Design</p>
 
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html'">
                 <img src="/img/products/f1.jpg" alt="">
 
                 <div class="des">
@@ -362,9 +362,8 @@
     <section id="pagination" class="section-p1">
         <a href="#">1</a>
         <a href="#">2</a>
-        <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+        <a href="#"><i class="far fa-long-arrow-alt-right"></i></a>
     </section>
-
 
     <!-- Newsletter  Banner Section -->
     <section id="newsletter" class="section-p1 section-m1">
