create blog.html and add style and banner for blog header

--- a/sproduct.html
+++ b/sproduct.html
@@ -75,7 +75,6 @@
             </span>
         </div>
     </section>
-
     
     <!-- Feature Product Section -->
     <section id="Product1" class="section-p1">
@@ -165,7 +164,6 @@
         </div>
     </section>
 
-
     <!-- Newsletter  Banner Section -->
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
@@ -232,6 +230,7 @@
         </div>
     </footer>
 
+    <!-- Script for choose single product many same type sample -->
     <script>
         var MainImg = document.getElementById("MainImg");
         var smallimg = document.getElementsByClassName("small-img");
