Add blog Section divide into 2 part blog-img and blog-details and style

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Page</title>
+    <title>Blog Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -22,7 +22,7 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a  href="shop.html">Shop</a></li>
-                <li><a class="active" href="#">Blog</a></li>
+                <li><a class="active" href="blog.html">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li id="lg-bag"><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
@@ -38,7 +38,70 @@
     <!-- Hero Section -->
     <section id="page-header" class="blog-header">
         <h2>#readmore</h2>
-        <p> read all case studies about our products!</p>
+        <p> Read all case studies about our products!</p>
+
+    </section>
+
+    <section id="blog">
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b1.jpg" alt="" >
+            </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+            <h1>13/01</h1>
+        </div>
+
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b2.jpg" alt="" >
+            </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+            <h1>13/02</h1>
+        </div>
+
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b3.jpg" alt="" >
+            </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+            <h1>13/03</h1>
+        </div>
+
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b4.jpg" alt="" >
+            </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+            <h1>13/04</h1>
+        </div>
+        
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b6.jpg" alt="" >
+            </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+            <h1>13/05</h1>
+        </div>
 
     </section>
 
