--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li id="lg-bag"><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
