add blog section style for small screen device

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a  href="shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a class="active" href="blog.html">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -42,14 +42,17 @@
 
     </section>
 
+    <!-- Blog Section -->
     <section id="blog">
         <div class="blog-box">
             <div class="blog-img">
-                <img src="img/blog/b1.jpg" alt="" >
+                <img src="img/blog/b1.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
+                    placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
+                    repellat veritatis porro!</p>
                 <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/01</h1>
@@ -57,11 +60,13 @@
 
         <div class="blog-box">
             <div class="blog-img">
-                <img src="img/blog/b2.jpg" alt="" >
+                <img src="img/blog/b2.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
+                    placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
+                    repellat veritatis porro!</p>
                 <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/02</h1>
@@ -69,11 +74,13 @@
 
         <div class="blog-box">
             <div class="blog-img">
-                <img src="img/blog/b3.jpg" alt="" >
+                <img src="img/blog/b3.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
+                    placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
+                    repellat veritatis porro!</p>
                 <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/03</h1>
@@ -81,23 +88,27 @@
 
         <div class="blog-box">
             <div class="blog-img">
-                <img src="img/blog/b4.jpg" alt="" >
+                <img src="img/blog/b4.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
+                    placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
+                    repellat veritatis porro!</p>
                 <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/04</h1>
         </div>
-        
+
         <div class="blog-box">
             <div class="blog-img">
-                <img src="img/blog/b6.jpg" alt="" >
+                <img src="img/blog/b6.jpg" alt="">
             </div>
             <div class="blog-details">
                 <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate repellat veritatis porro!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quod totam doloribus illo, sapiente
+                    placeat eaque doloremque alias cum aliquam nisi molestias excepturi nam sequi dicta cupiditate
+                    repellat veritatis porro!</p>
                 <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/05</h1>
