Add about head section and style its

--- a/about.html
+++ b/about.html
@@ -42,6 +42,22 @@
 
     </section>
 
+    <!-- About head section  -->
+    <section id="about-head" class="section-p1">
+        <img src="img/about/a6.jpg" alt="">
+        <div>
+            <h2>Who are you?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi suscipit, provident nesciunt incidunt
+                magnam ad id quisquam aliquid nostrum deserunt eligendi praesentium nisi quae earum, molestias sunt
+                optio temporibus.</p>
+            <abbr title="">Create stunning images with as much or as little control as you like thanks to a choice of
+                Basic and Creative modes.</abbr>
+            <br><br>
+
+            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Create stunning images with as much or as
+                little control as you like thanks to a choice of Basic and Creative modes.</marquee>
+        </div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="section-p1">
