add about-app section add vedio feture and also style it

--- a/about.html
+++ b/about.html
@@ -59,6 +59,15 @@
         </div>
     </section>
 
+    <!-- About app Section -->
+    <section id="about-app" class="section-p1">
+        <h1>Download Our <a href="#">App</a></h1>
+        <div class="video">
+            <video autoplay muted loop src="img/about/1.mp4"></video>
+        </div>
+
+    </section>
+
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
