add feature section and newsletter Banner section in about page

--- a/about.html
+++ b/about.html
@@ -68,6 +68,53 @@
 
     </section>
 
+    <!-- Feature Section -->
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="/img/features/fe1.png" alt="" width="150px">
+            <h6>Free Shiping</h6>
+        </div>
+
+        <div class="fe-box">
+            <img src="/img/features/Online Order.jpg" alt="" width="150px">
+            <h6>Online Order</h6>
+        </div>
+
+        <div class="fe-box">
+            <img src="/img/features/Save Money.jpg" alt="" width="150px">
+            <h6> Save Money </h6>
+        </div>
+
+        <div class="fe-box">
+            <img src="/img/features/p.webp" alt="" width="150px">
+            <h6>Promation</h6>
+        </div>
+
+
+        <div class="fe-box">
+            <img src="/img/features/Happy Shop2.png" alt="" width="150px">
+            <h6>Happy Sell</h6>
+        </div>
+
+        <div class="fe-box">
+            <img src="/img/features/support.png" alt="" width="150px">
+            <h6>Support</h6>
+        </div>
+
+    </section>
+
+    <!-- Newsletter  Banner Section -->
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4> Sign Up For Newslatters</h4>
+            <p> Get E- mail update about our latest shop and <span>special Offers</span>. </p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your Email Address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
