--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a class="active" href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
@@ -37,69 +37,8 @@
 
     <!-- Hero Section -->
     <section id="page-header" class="about-header">
-        <h2>#KnowUs</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, corporis?</p>
-
-    </section>
-
-    <!-- About head section  -->
-    <section id="about-head" class="section-p1">
-        <img src="img/about/a6.jpg" alt="">
-        <div>
-            <h2>Who are you?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi suscipit, provident nesciunt incidunt
-                magnam ad id quisquam aliquid nostrum deserunt eligendi praesentium nisi quae earum, molestias sunt
-                optio temporibus.</p>
-            <abbr title="">Create stunning images with as much or as little control as you like thanks to a choice of
-                Basic and Creative modes.</abbr>
-            <br><br>
-
-            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Create stunning images with as much or as
-                little control as you like thanks to a choice of Basic and Creative modes.</marquee>
-        </div>
-    </section>
-
-    <!-- About app Section -->
-    <section id="about-app" class="section-p1">
-        <h1>Download Our <a href="#">App</a></h1>
-        <div class="video">
-            <video autoplay muted loop src="img/about/1.mp4"></video>
-        </div>
-
-    </section>
-
-    <!-- Feature Section -->
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="/img/features/fe1.png" alt="" width="150px">
-            <h6>Free Shiping</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/Online Order.jpg" alt="" width="150px">
-            <h6>Online Order</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/Save Money.jpg" alt="" width="150px">
-            <h6> Save Money </h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/p.webp" alt="" width="150px">
-            <h6>Promation</h6>
-        </div>
-
-
-        <div class="fe-box">
-            <img src="/img/features/Happy Shop2.png" alt="" width="150px">
-            <h6>Happy Sell</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/support.png" alt="" width="150px">
-            <h6>Support</h6>
-        </div>
+        <h2>#let's_talk</h2>
+        <p>KEAVE A MESSAGE. We love to hear from you!</p>
 
     </section>
 
