--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,38 @@
 
     </section>
 
+    <!-- Google map and Details section -->
+    <section id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>Visit one of our agency locations or contact us today</h2>
+            <h3>Head Office</h3>
+            <div>
+                <li>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>56 Fizabaad Street Lucknow, Uttar Pradesh , India</p>
+                </li>
+                <li>
+                    <i class="fas fa-envelope"></i>
+                    <p>abdulrahmans0414@gmail.com</p>
+                </li>
+                <li>
+                    <i class="fas fa-phone-alt"></i>
+                    <p>+917607255678</p>
+                </li>
+                <li>
+                    <i class="fas fa-clock"></i>
+                    <p>Mon to Sat: 9 am to 16 pm</p>
+                </li>
+            </div>
+        </div>
+
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227822.41146195165!2d80.94251274999999!3d26.848692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd991f32b16b%3A0x93ccba8909978be7!2sLucknow%2C%20Uttar%20Pradesh%2C%20India!5e0!3m2!1sen!2slt!4v1698294541255!5m2!1sen!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            
+        </div>
+    </section>
+
     <!-- Newsletter  Banner Section -->
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
