--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,39 @@
         </div>
 
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227822.41146195165!2d80.94251274999999!3d26.848692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd991f32b16b%3A0x93ccba8909978be7!2sLucknow%2C%20Uttar%20Pradesh%2C%20India!5e0!3m2!1sen!2slt!4v1698294541255!5m2!1sen!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227822.41146195165!2d80.94251274999999!3d26.848692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd991f32b16b%3A0x93ccba8909978be7!2sLucknow%2C%20Uttar%20Pradesh%2C%20India!5e0!3m2!1sen!2slt!4v1698294541255!5m2!1sen!2slt"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        </div>
+    </section>
+
+    <!-- Contact Form details Section -->
+    <section id="form-details">
+        <form action="">
+            <span>LEAVE A MESSAGE</span>
+            <h2>We love to hear from you</h2>
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="E-mail">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+
+        <div class="people">
+            <div>
+                <img src="img/people/Ar.jpg" alt="" srcset="">
+            <p><span>Abdul Rahman  </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com</p>
+            </div>
+            <div>
+                <img src="img/people/Ar.jpg" alt="" srcset="">
+            <p><span>Abdul Rahman  </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com</p>
+            </div>
+            <div>
+                <img src="img/people/Ar.jpg" alt="" srcset="">
+            <p><span>Abdul Rahman  </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com</p>
+            </div>
             
         </div>
     </section>
