addstyle in contact page for small screen device

--- a/contact.html
+++ b/contact.html
@@ -92,17 +92,20 @@
         <div class="people">
             <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
-            <p><span>Abdul Rahman  </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com</p>
+                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com
+                </p>
             </div>
             <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
-            <p><span>Abdul Rahman  </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com</p>
+                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com
+                </p>
             </div>
             <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
-            <p><span>Abdul Rahman  </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com</p>
+                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com
+                </p>
             </div>
-            
+
         </div>
     </section>
 
