add cart.html file and fix navbar and also hero section.

--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Cart Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -23,9 +23,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a class="active" href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a  href="contact.html">Contact</a></li>
+                <li id="lg-bag"><a class="active" href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
         </div>
@@ -37,82 +37,9 @@
 
     <!-- Hero Section -->
     <section id="page-header" class="about-header">
-        <h2>#KnowUs</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, corporis?</p>
+        <h2>#cart</h2>
+        <p>add your coupon &SAVEVupto 70%!</p>
 
-    </section>
-
-    <!-- About head section  -->
-    <section id="about-head" class="section-p1">
-        <img src="img/about/a6.jpg" alt="">
-        <div>
-            <h2>Who are you?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi suscipit, provident nesciunt incidunt
-                magnam ad id quisquam aliquid nostrum deserunt eligendi praesentium nisi quae earum, molestias sunt
-                optio temporibus.</p>
-            <abbr title="">Create stunning images with as much or as little control as you like thanks to a choice of
-                Basic and Creative modes.</abbr>
-            <br><br>
-
-            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Create stunning images with as much or as
-                little control as you like thanks to a choice of Basic and Creative modes.</marquee>
-        </div>
-    </section>
-
-    <!-- About app Section -->
-    <section id="about-app" class="section-p1">
-        <h1>Download Our <a href="#">App</a></h1>
-        <div class="video">
-            <video autoplay muted loop src="img/about/1.mp4"></video>
-        </div>
-
-    </section>
-
-    <!-- Feature Section -->
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="/img/features/fe1.png" alt="" width="150px">
-            <h6>Free Shiping</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/Online Order.jpg" alt="" width="150px">
-            <h6>Online Order</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/Save Money.jpg" alt="" width="150px">
-            <h6> Save Money </h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/p.webp" alt="" width="150px">
-            <h6>Promation</h6>
-        </div>
-
-
-        <div class="fe-box">
-            <img src="/img/features/Happy Shop2.png" alt="" width="150px">
-            <h6>Happy Sell</h6>
-        </div>
-
-        <div class="fe-box">
-            <img src="/img/features/support.png" alt="" width="150px">
-            <h6>Support</h6>
-        </div>
-
-    </section>
-
-    <!-- Newsletter  Banner Section -->
-    <section id="newsletter" class="section-p1 section-m1">
-        <div class="newstext">
-            <h4> Sign Up For Newslatters</h4>
-            <p> Get E- mail update about our latest shop and <span>special Offers</span>. </p>
-        </div>
-        <div class="form">
-            <input type="text" placeholder="Your Email Address">
-            <button class="normal">Sign Up</button>
-        </div>
     </section>
 
     <!-- Footer Section -->
